small ui fix (hero my name centered on mobile)

--- a/assets/landing_bus.less
+++ b/assets/landing_bus.less
@@ -500,6 +500,10 @@ section.hero-wrapper {
             font-size: 18px;
             cursor: default;
 
+            @media (max-width: 768px) {
+                align-self: center;
+            }
+
             img {
                 width: 50px;
                 height: 50px;
